crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_InvalidExpression_invalid_expression_yield_from_in_base_class_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: yield expression cannot be used within a generic definition
 --> <filename>:2:13
  |
2 | class C[T]((yield from [object])):
  |             ^^^^^^^^^^^^^^^^^^^
3 |     pass
  |
