crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_InvalidExpression_invalid_expression_yield_in_type_alias_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: yield expression cannot be used within a type alias
 --> <filename>:2:11
  |
2 | type Y = (yield 1)
  |           ^^^^^^^
  |
