crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_InvalidExpression_invalid_expression_yield_in_type_param_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: yield expression cannot be used within a TypeVar bound
 --> <filename>:2:12
  |
2 | type X[T: (yield 1)] = int
  |            ^^^^^^^
  |
