crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_InvalidStarExpression_invalid_star_expression_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: Starred expression cannot be used here
 --> <filename>:3:12
  |
2 | def func():
3 |     return *x
  |            ^^
  |
