crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_IrrefutableCasePattern_irrefutable_case_pattern_wildcard_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: wildcard makes remaining patterns unreachable
 --> <filename>:3:10
  |
2 | match value:
3 |     case _:
  |          ^
4 |         pass
5 |     case 1:
  |
