crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_MultipleCaseAssignment_multiple_case_assignment_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: multiple assignments to name `a` in pattern
 --> <filename>:3:14
  |
2 | match x:
3 |     case [a, a]:
  |              ^
4 |         pass
5 |     case _:
  |
