crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_ReboundComprehensionVariable_rebound_comprehension_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: assignment expression cannot rebind comprehension variable
 --> <filename>:1:2
  |
1 | [x:= 2 for x in range(2)]
  |  ^
  |
