crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_SingleStarredAssignment_single_starred_assignment_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: starred assignment target must be in a list or tuple
 --> <filename>:1:1
  |
1 | *a = [1, 2, 3, 4]
  | ^^
  |
